--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,53 @@
+@font-face {
+    font-family: "dana";
+    src: url("/src/assets/font/dana/DanaFaNum-Regular.woff2") format("woff2");
+    font-weight: normal;
+    font-style: normal;
+  }
+  @font-face {
+    font-family: "Dana Medium";
+    src: url("/src/assets/font/dana/DanaFaNum-Medium.woff2") format("woff2");
+    font-weight: normal;
+    font-style: normal;
+  }
+  @font-face {
+    font-family: "Dana DemiBold";
+    src: url("/src/assets/font/dana/DanaFaNum-DemiBold.woff2") format("woff2");
+    font-weight: normal;
+    font-style: normal;
+  }
+  @font-face {
+    font-family: "Morabba Light";
+    src: url("/src/assets/font/morabba/Morabba-Light.woff2") format("woff2");
+    font-weight: normal;
+    font-style: normal;
+  }
+  @font-face {
+    font-family: "Morabba Medium";
+    src: url("/src/assets/font/morabba/Morabba-Medium.woff2") format("woff2");
+    font-weight: normal;
+    font-style: normal;
+  }
+  @font-face {
+    font-family: "Morabba Bold";
+    src: url("/src/assets/font/morabba/Morabba-Bold.woff") format("woff2");
+    font-weight: normal;
+    font-style: normal;
+  }
+  
+  
+  
+  
 @import "tailwindcss";
+
+@custom-variant dark (&:where(.dark, .dark *));
+@theme{
+    --font-dana: dana;
+    --font-DanaMedium: Dana Medium;
+    --font-danaDemiBold: Dana DemiBold;
+    --font-MorabbaLight: Morabba Light;
+    --font-MorabbaMedium: Morabba Medium;
+    --font-MorabbaBold:Morabba Bold;
+} 
+
+
