--- a/src/style.css
+++ b/src/style.css
@@ -1,53 +1,116 @@
 @font-face {
-    font-family: "dana";
-    src: url("/src/assets/font/dana/DanaFaNum-Regular.woff2") format("woff2");
-    font-weight: normal;
-    font-style: normal;
-  }
-  @font-face {
-    font-family: "Dana Medium";
-    src: url("/src/assets/font/dana/DanaFaNum-Medium.woff2") format("woff2");
-    font-weight: normal;
-    font-style: normal;
-  }
-  @font-face {
-    font-family: "Dana DemiBold";
-    src: url("/src/assets/font/dana/DanaFaNum-DemiBold.woff2") format("woff2");
-    font-weight: normal;
-    font-style: normal;
-  }
-  @font-face {
-    font-family: "Morabba Light";
-    src: url("/src/assets/font/morabba/Morabba-Light.woff2") format("woff2");
-    font-weight: normal;
-    font-style: normal;
-  }
-  @font-face {
-    font-family: "Morabba Medium";
-    src: url("/src/assets/font/morabba/Morabba-Medium.woff2") format("woff2");
-    font-weight: normal;
-    font-style: normal;
-  }
-  @font-face {
-    font-family: "Morabba Bold";
-    src: url("/src/assets/font/morabba/Morabba-Bold.woff") format("woff2");
-    font-weight: normal;
-    font-style: normal;
-  }
-  
-  
-  
-  
+  font-family: "dana";
+  src: url("/src/assets/font/dana/DanaFaNum-Regular.woff2") format("woff2");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Dana Medium";
+  src: url("/src/assets/font/dana/DanaFaNum-Medium.woff2") format("woff2");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Dana DemiBold";
+  src: url("/src/assets/font/dana/DanaFaNum-DemiBold.woff2") format("woff2");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Morabba Light";
+  src: url("/src/assets/font/morabba/Morabba-Light.woff2") format("woff2");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Morabba Medium";
+  src: url("/src/assets/font/morabba/Morabba-Medium.woff2") format("woff2");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Morabba Bold";
+  src: url("/src/assets/font/morabba/Morabba-Bold.woff") format("woff2");
+  font-weight: normal;
+  font-style: normal;
+}
+
+
+
+
 @import "tailwindcss";
 
 @custom-variant dark (&:where(.dark, .dark *));
-@theme{
-    --font-dana: dana;
-    --font-DanaMedium: Dana Medium;
-    --font-danaDemiBold: Dana DemiBold;
-    --font-MorabbaLight: Morabba Light;
-    --font-MorabbaMedium: Morabba Medium;
-    --font-MorabbaBold:Morabba Bold;
-} 
+
+@theme {
+  --font-dana: dana;
+  --font-DanaMedium: Dana Medium;
+  --font-danaDemiBold: Dana DemiBold;
+  --font-MorabbaLight: Morabba Light;
+  --font-MorabbaMedium: Morabba Medium;
+  --font-MorabbaBold: Morabba Bold;
+
+}
+
+@layer components {
+  .transime {
+    transition: all 500ms ease-in-out;
+  }
+
+  .container {
+    width: 90% !important;
+    margin: 0 auto;
+  }
+
+  .bg-header-desktop {
+    background-image: url('/src/assets/headerBgDesktop.webp');
+  }
+
+  .bg-header-mobile {
+    background-image: url('/src/assets/headerBgMobile.webp');
+  }
+
+  .circle {
+    @apply flex items-center justify-center border rounded-full;
 
 
+  }
+
+  .circle--lg {
+    @apply w-[203px] h-[203px] border-white/25;
+
+  }
+
+  .circle--md {
+    @apply w-[145px] h-[145px] border-white/50;
+
+  }
+
+  .circle--sm {
+    @apply w-[95px] h-[95px] border-white/80;
+
+  }
+
+
+
+  @media screen and (min-width:1024px) {
+    html.dark .product {
+      background-image: url("../src/assets/body-bg.png");
+    }
+
+    .product {
+      background: linear-gradient(rgba(243, 244, 246, 0.2), rgba(243, 244, 246, 0.2)), url("../src/assets/body-bg.png");
+      background-repeat: no-repeat;
+      background-size: 100%;
+      height: 900px;
+    }
+  }
+  html.dark{
+    background: #3f3f46;
+  }
+}
